--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
         header {
             text-align: center;
-            padding: 1rem; /*scales the padding off of 1x fontsize of root element*/
+            padding: 0rem; /*scales the padding off of 1x fontsize of root element*/
             background: #f4f4f4;
             border-bottom: 1px solid #ccc; /*draws a horizontal blue line ( bot of the element border)*/
         }
@@ -34,7 +34,7 @@
         }
 
         section {
-            margin-bottom: 0rem - 5rem;
+            margin-bottom: 0rem;
         }
 
         h2 {
@@ -43,14 +43,25 @@
         }
 
         h3{
+            /* background: red; */
             font-weight: normal;
-            padding-bottom:0rem;
+            padding-bottom: 0rem;
+            margin-bottom: -1rem;
+
         }
+
+        p{
+            /* background:cyan */
+        }
+
+      
 
         ul {
             list-style: disc;
-            margin: 1rem 0 1rem 1.5rem;
+            margin: 1rem 0 1rem 0.5rem;
         }
+
+       
 
         footer {
             text-align: center;
