--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
         header {
             text-align: center;
-            padding: 0rem; /*scales the padding off of 1x fontsize of root element*/
+            padding: 0rem; /*scales the padding off of 0x fontsize of root element*/
             background: #f4f4f4;
             border-bottom: 1px solid #ccc; 
         }
@@ -18,12 +18,12 @@
             margin: 0rem 0rem; /*specifies top and bot margins to be 0.5rem but 0rem for left/right*/
         }
 
-        header p a {
+        header p a { 
             color: #0077cc; /*draws a horizontal blue line ( bot of the element border)*/
             text-decoration: none; /*no underlines or strikethrough, etc text*/
         }
 
-        header p a:hover {
+        header p a:hover { /*when user hovers cursor over link (a), it underlines it*/
             text-decoration: underline;
         }
 
