--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,7 @@
             max-width:90%;
             padding: 0rem 2rem;
             margin:0rem;
+            justify-content:center;
         }
 
          #gallery-header{
