--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,15 @@
             padding:0rem 0rem 2rem 0rem;
         }
 
+        .hidden{
+            opacity: 0;
+            transition: opacity 0.5s ease-in;
+        }
+
+        .visible {
+            opacity: 1;
+        }
+
        
 
         
