--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@
         footer {
             text-align: center;
             padding: 0.75rem;
+            width:100%;
             background: #f4f4f4;
             border-top: 1px solid #ccc;
             margin-top: 2rem;
@@ -176,7 +177,7 @@
 
         #gallery-main{
             max-width:100%;
-            padding: 0rem 4rem;
+            padding: 0rem 5rem;
             margin:0rem;
             justify-content:center;
             align-items:center;
@@ -219,6 +220,17 @@
         .visible {
             opacity: 1;
         }
+
+        /*HOME STYLE*/
+        #main-home{
+            justify-content:center;
+        }
+
+       /* .home-image{
+        border-radius: 2%;
+        
+        justify-content:center;
+       } */
 
        
 
