--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@
         
 
        .home-image{
-        width:100%;
+        max-width:100%;
         height:auto;
         display: flex;
         justify-content:center;
